# NvidiaAIDenoiser

./: .gitignore  .gitmodules  CMakeLists.txt  Denoiser.pro  README.md  SConstruct  conanfile.txt
cmake/: FindOpenImageIO.cmake  FindOptiX80.cmake
contrib/DevIL/lib/: DevIL.lib  ILU.lib  ILUT.lib
contrib/DevIL/lib/pkgconfig/: IL.pc  ILU.pc  ILUT.pc
contrib/DevIL/lib/x64/unicode/Release/: DevIL.lib  ILU.lib  ILUT.lib
contrib/DevIL/lib/x86/Release/: DevIL.lib  ILU.lib  ILUT.lib
contrib/DevIL/lib/x86/unicode/Release/: DevIL.lib  ILU.lib  ILUT.lib
contrib/OpenImageIO/include/: tiffconf.h
contrib/OpenImageIO/include/OpenEXR/: IexExport.h  IexMathFloatExc.h  IlmThreadExport.h  ImathExport.h  ImfExport.h  halfExport.h
contrib/OpenImageIO/include/OpenImageIO/: oiioversion.h
contrib/OpenImageIO/include/boost/config/: user.hpp
contrib/OpenImageIO/include/openssl/: opensslconf.h  rand.h
contrib/OpenImageIO/lib/: OpenImageIO.lib
contrib/optix/include/: optix.h  optix_cuda.h  optix_cuda_interop.h  optix_d3d10_interop.h  optix_d3d11_interop.h  optix_d3d9_interop.h  optix_device.h  optix_gl_interop.h  optix_host.h  optix_math.h  optix_sizet.h  optix_world.h
contrib/optix/include/internal/: optix_datatypes.h  optix_declarations.h  optix_defines.h  optix_internal.h
contrib/optix/include/optix_prime/: optix_prime.h  optix_prime_declarations.h  optix_primepp.h
contrib/optix/include/optix_prime/internal/: Atom.h  Handle.h  Ref.h
contrib/optix/include/optixu/: optixpp.h  optixpp_namespace.h  optixu.h  optixu_aabb.h  optixu_aabb_namespace.h  optixu_high_level.h  optixu_high_level_shared.h  optixu_math.h  optixu_math_namespace.h  optixu_math_stream.h  optixu_math_stream_namespace.h  optixu_matrix.h  optixu_matrix_namespace.h  optixu_quaternion.h  optixu_quaternion_namespace.h  optixu_traversal.h  optixu_vector_functions.h  optixu_vector_types.h
src/: main.cpp
